force-app/main/default/objects/Job_Posting__c/Job_Posting__c.object-meta.xml
<CustomObject>
    <label>Job Posting</label>
    <nameField>
        <displayFormat>JP-{0000}</displayFormat>
        <label>Job Posting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>