force-app/main/default/objects/Job_Posting__c/fields/Employment_website__c.field-meta.xml
<CustomField>
    <fullName>Employment_website__c</fullName>
    <label>Employment website</label>
    <referenceTo>Employment_website__c</referenceTo>
    <relationshipLabel>Job Postings</relationshipLabel>
    <relationshipName>Job_Postings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>